[gd_scene load_steps=4 format=3 uid="uid://cnvy3kf61ktp1"]

[ext_resource type="Script" path="res://scenes/systems/Water/Water.gd" id="1_abg6w"]
[ext_resource type="Script" path="res://scenes/systems/Water/WaterBody.gd" id="2_a4vfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swpbu"]

[node name="Water" type="Node2D"]
script = ExtResource("1_abg6w")
distance_between_points = 50.0
depth = null

[node name="WaterBody" type="Polygon2D" parent="."]
color = Color(0.309804, 0.537255, 0.835294, 1)
antialiased = true
script = ExtResource("2_a4vfj")
control_point_distance = 25.0

[node name="Area2D" type="Area2D" parent="WaterBody"]
collision_layer = 32
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterBody/Area2D"]
shape = SubResource("RectangleShape2D_swpbu")
debug_color = Color(0.627451, 0.568627, 1, 0.419608)

[connection signal="body_entered" from="WaterBody/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="WaterBody/Area2D" to="." method="_on_area_2d_body_exited"]
